Highight errors in red (fixes #33)
Hopefully this isn't too aggressive or invisible a red.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -123,3 +123,9 @@ table.tickets tr.paid {
 table.tickets tr.expired {
   color: #f00;
 }
+
+.errors {
+  color: #933;
+  font-weight: bold;
+}
+
